# active_inference

./: AICpanda.cpp  AICpandapickplace.cpp  README.md
franka_custom_controllers/: CMakeLists.txt  franka_custom_controllers_plugin.xml  package.xml
franka_custom_controllers/cfg/: compliance_param.cfg  desired_mass_param.cfg
franka_custom_controllers/config/: franka_custom_controllers.yaml
franka_custom_controllers/include/franka_custom_controllers/: AIC_controller.h  MRAC_controller.h  uAIC_controller.h
franka_custom_controllers/launch/: AIC_controller.launch  MRAC_controller.launch  uAIC_controller.launch
franka_custom_controllers/src/: AIC_controller.cpp  MRAC_controller.cpp  uAIC_controller.cpp
